--- a/src/components/Messages/Message.css
+++ b/src/components/Messages/Message.css
@@ -11,6 +11,7 @@
   width: -moz-fit-content;
   width: fit-content;
   max-width: 100%;
+  box-shadow: 2px 2px 3px 0px #3333331a;
 }
 
 .Message-lz.warning {
